--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # This defines the base path where the front needs to aim the requests
 spring.data.rest.base-path=/api
+
+okta.oauth2.client.id=0oabi36i4aXSYWspc5d7
+okta.oauth2.issuer=https://dev-48989672.okta.com/oauth2/default
